[gd_scene load_steps=11 format=2]

[ext_resource path="res://pages/page.tscn" type="PackedScene" id=1]
[ext_resource path="res://pages/sabrina.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/SpaceMono-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/fonts/SpaceMono-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://interface elements/slider/slider.tscn" type="PackedScene" id=6]
[ext_resource path="res://pages/page 2.gd" type="Script" id=7]
[ext_resource path="res://interface elements/button/button.tscn" type="PackedScene" id=816]
[ext_resource path="res://resources/fonts/editor_dynamic_font.tres" type="DynamicFont" id=817]

[sub_resource type="DynamicFont" id=1]
size = 57
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 48
use_mipmaps = true
font_data = ExtResource( 5 )

[node name="page 2" type="Node2D"]
script = ExtResource( 7 )

[node name="Node2D" parent="." instance=ExtResource( 1 )]

[node name="NinePatchRect2" parent="Node2D" index="0"]
margin_bottom = 2010.0

[node name="NinePatchRect" parent="Node2D" index="1"]
margin_left = 130.0
margin_top = 10.0
margin_right = 874.0
margin_bottom = 1990.0

[node name="Label" type="Label" parent="Node2D"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 150.0
margin_top = 20.0
margin_right = 850.0
margin_bottom = 113.0
rect_scale = Vector2( 0.749851, 0.749851 )
custom_fonts/font = SubResource( 1 )
text = "Why Are Puzzle Games Niche?
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Node2D"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 150.0
margin_top = 110.0
margin_right = 1944.0
margin_bottom = 2207.0
rect_scale = Vector2( 0.393682, 0.368694 )
custom_fonts/font = SubResource( 2 )
text = "       Puzzle games, on a certain level, are something of a niche genre. I know that sounds like a blatant lie; millions of people play Bejeweled on their phones, and puzzle games in general are the face of casual gaming. Which almost proves my point; the actual quality puzzle games, the ones that people pay for in lieu of being bombarded with advertisements, are ignored by many gamers. 
 
        The true power of puzzle games is revealed when they’re being played with an actual controller, instead of a phone. Game controllers are ergonomic, and seamless. They become one with the player, and are more conducive for trancing than the clumsy finger-on-touchscreen gameplay phones offer.
 
        Yes, trancing. You may have heard some people refer to it as “the zone”. That is one of the cores of the puzzle game appeal. We live in sad times; every day is filled with so much tragedy, the mind ostensibly grows numb to the increasing pain of being alive. But the pain never truly goes away. Puzzle games are a vague cure. A great puzzle game allows its player to zone out for somewhere between thirty minutes and an hour, blissfully tuned-out of their predicament. 
 
        That is what puzzle games are for. They are games which don’t require much in the way of devotion; the games can be understood within only a few minutes. But simultaneously, a player grows every time they play the game, becoming more skilled, more virtuosic. The cost of entry is low, but there’s a lot more to any puzzler than the first impression.
 
        The reason that puzzle games aren’t as popular as they once were is because of how they’re perceived. They seem like shallow games, that don’t have anything to offer a serious intellectual. And they are based around scores and levels, instead of story beats and long campaigns. Most people think puzzle games don’t have anything to give them, and if they’ve only played shitty freenium puzzle games, they would be right. 
 
        There’s a reason Tetris is usually considered to be a great game, and it’s because almost everyone has actually played it. Which is why I humbly recommend that you spend some time with a good puzzle game when you get the chance. Pull out your gamepad, find a nice ROM, and lose yourself; you'll find there are many great puzzle games with a similar level of quality.

[for a free zine that examines the gameplay mechanics of nine puzzle games, visit the following link. this itch page also has a Queer Trans Zine, erotica, and more!]


"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sabrina" type="Node2D" parent="Node2D"]
position = Vector2( 0, -1350 )
script = ExtResource( 2 )

[node name="Label10" type="Label" parent="Node2D/sabrina"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 150.0
margin_top = 2960.0
margin_right = 1960.0
margin_bottom = 4457.0
rect_scale = Vector2( 0.393682, 0.368694 )
custom_fonts/font = ExtResource( 817 )
text = "Article by SabrinaTVBand"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" parent="Node2D/sabrina" instance=ExtResource( 816 )]
margin_left = 152.0
margin_top = 3010.0
margin_right = 1343.0
margin_bottom = 3160.0
rect_scale = Vector2( 0.589049, 0.589049 )
text = "itch.io"

[node name="twitter" parent="Node2D/sabrina" instance=ExtResource( 816 )]
margin_left = 150.0
margin_top = 3120.0
margin_right = 1341.0
margin_bottom = 3270.0
rect_scale = Vector2( 0.589049, 0.589049 )
text = "twitter"

[node name="music" parent="Node2D/sabrina" instance=ExtResource( 816 )]
margin_left = 150.0
margin_top = 3230.0
margin_right = 1341.0
margin_bottom = 3380.0
rect_scale = Vector2( 0.589049, 0.589049 )
text = "music"

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -1050 )
scale = Vector2( 0.515607, 2.10379 )

[node name="slider" parent="." instance=ExtResource( 6 )]
position = Vector2( 910, 270 )
[connection signal="clicked" from="Node2D/sabrina/button" to="Node2D/sabrina" method="_on_button_clicked"]
[connection signal="clicked" from="Node2D/sabrina/twitter" to="Node2D/sabrina" method="_on_twitter_clicked"]
[connection signal="clicked" from="Node2D/sabrina/music" to="Node2D/sabrina" method="_on_music_clicked"]
[connection signal="dragged" from="slider" to="." method="_on_slider_dragged"]

[editable path="Node2D"]
